# todoApp-fast

./: .env  README.md  alembic.ini  database.py  main.py  pipeline.config.yml  pyproject.toml  requirements.txt  todo.db
.github/actions/deploy/: action.yml
.github/actions/security/: run_dependency_audit.py
.github/actions/setup/: action.yml  validate_config.py
.github/actions/test/: check_coverage.py  generate_report.py  run_quality.py
.github/github/actions/deploy/: action.yml  pre_deploy_check.py  write_deploy_summary.py
.github/github/actions/security/: action.yml  check_secret_scanning.py  write_summary.py
.github/github/actions/test/: action.yml
.github/github/workflows/: deploy.yml
.github/workflows/: ci.yml  deploy.yml
controllers/: auth.py  todo.py
controllers/helpers/: auth.py
models/: model.py
models/dto/: JwtResponse.py  model_pydantic.py
tests/unit/: conftest.py  test_auth_controller.py  test_auth_helpers.py  test_todo_controller.py
